--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".session4.SampleOverloadingActivity">
+        </activity>
         <activity android:name=".session4.SampleFuncActivity">
         </activity>
         <activity android:name=".session4.SampleConstActivity">
