--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,14 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".session5.SampleCharActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN"/>
+        <activity android:name=".session5.SampleAnyActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
-            <category android:name="android.intent.category.LAUNCHER"/>
-        </intent-filter>
-    </activity>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".session5.SampleCharActivity"/>
         <activity android:name=".session5.SampleNumberActivity">
         </activity>
         <activity android:name=".session4.SampleTailrecActivity">
