--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".session5.SampleNull2Activity">
+        </activity>
         <activity android:name=".session5.SampleAnyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
