5-2-2 List, Set, Map

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".session5.SampleListSetMapActivity"></activity>
         <activity android:name=".session5.SampleArrayActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,23 +17,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".session5.SampleIsActivity"></activity>
-        <activity android:name=".session5.SampleUnitNothingActivity"></activity>
-        <activity android:name=".session5.SampleAny2Activity"></activity>
-        <activity android:name=".session5.SampleNull2Activity"></activity>
-        <activity android:name=".session5.SampleAnyActivity"/>
+        <activity android:name=".session5.SampleIsActivity" />
+        <activity android:name=".session5.SampleUnitNothingActivity" />
+        <activity android:name=".session5.SampleAny2Activity" />
+        <activity android:name=".session5.SampleNull2Activity" />
+        <activity android:name=".session5.SampleAnyActivity" />
         <activity android:name=".session5.SampleCharActivity" />
-        <activity android:name=".session5.SampleNumberActivity"></activity>
-        <activity android:name=".session4.SampleTailrecActivity"></activity>
-        <activity android:name=".session4.SampleVarargActivity"></activity>
-        <activity android:name=".session4.SampleInfixActivity"></activity>
-        <activity android:name=".session4.SampleArgumentActivity"></activity>
-        <activity android:name=".session4.SampleOverloadingActivity"></activity>
-        <activity android:name=".session4.SampleFuncActivity"></activity>
-        <activity android:name=".session4.SampleConstActivity"></activity>
-        <activity android:name=".session4.SampleNullActivity"></activity>
-        <activity android:name=".session4.SampleVar2Activity"></activity>
-        <activity android:name=".session4.SampleValActivity"></activity>
+        <activity android:name=".session5.SampleNumberActivity" />
+        <activity android:name=".session4.SampleTailrecActivity" />
+        <activity android:name=".session4.SampleVarargActivity" />
+        <activity android:name=".session4.SampleInfixActivity" />
+        <activity android:name=".session4.SampleArgumentActivity" />
+        <activity android:name=".session4.SampleOverloadingActivity" />
+        <activity android:name=".session4.SampleFuncActivity" />
+        <activity android:name=".session4.SampleConstActivity" />
+        <activity android:name=".session4.SampleNullActivity" />
+        <activity android:name=".session4.SampleVar2Activity" />
+        <activity android:name=".session4.SampleValActivity" />
         <activity android:name=".MainActivity" />
     </application>
 
