--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".session6.SampleForActivity"></activity>
+        <activity android:name=".session6.SampleWhileActivity"></activity>
+        <activity android:name=".session6.SampleForActivity" />
         <activity android:name=".session6.SampleWhenActivity" />
         <activity android:name=".session6.SampleIfActivity" />
         <activity android:name=".session5.SampleIteratorActivity" />
