--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".session6.SampleDeploymentActivity"></activity>
+        <activity android:name=".session6.SampleMatchActivity"></activity>
+        <activity android:name=".session6.SampleLogicalActivity" />
+        <activity android:name=".session6.SampleDeploymentActivity" />
         <activity android:name=".session6.SampleArithmeticActivity" />
         <activity android:name=".session6.SampleOperatorActivity" />
         <activity android:name=".session6.SampleBreakActivity" />
