11-1-2 데이터 클래스의 함수

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".session6.SampleMatchActivity"></activity>
+        <activity android:name=".session11.SampleDataClaseFunActivity"></activity>
+        <activity android:name=".session6.SampleMatchActivity" />
         <activity android:name=".session6.SampleLogicalActivity" />
         <activity android:name=".session6.SampleDeploymentActivity" />
         <activity android:name=".session6.SampleArithmeticActivity" />
