--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".session11.SampleEnumFirstActivity"></activity>
+        <activity android:name=".session11.SampleSealedActivity"></activity>
+        <activity android:name=".session11.SampleEnumFirstActivity" />
         <activity android:name=".session11.SampleEnumActivity" />
         <activity android:name=".session11.SampleDataClaseFunActivity" />
         <activity android:name=".session6.SampleMatchActivity" />
